--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # .env.development
-REACT_APP_API_URL=http://127.0.0.1:5000/api
+VITE_API_URL=http://127.0.0.1:5000/api
 
 # .env.production
-REACT_APP_API_URL=https://chronous-production.up.railway.app
+VITE_API_URL=https://chronous-production.up.railway.app/api
